--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    container_name: autobattler-server
+    container_name: casadeares-server
     environment:
       NODE_ENV: development
       PORT: 3001
@@ -19,7 +19,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    container_name: autobattler-client
+    container_name: casadeares-client
     environment:
       VITE_PROXY_TARGET: http://server:3001
     volumes:
