--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     volumes:
       - ./server:/app
       - /app/node_modules
-    # ports:
-    #   - "3001:3001"
+    ports:
+      - "3001:3001"
     command: npm run dev
 
   client:
@@ -25,8 +25,8 @@ services:
     volumes:
       - ./client:/app
       - /app/node_modules
-    # ports:
-    #   - "5173:5173"
+    ports:
+      - "5173:5173"
     command: npm run dev -- --host 0.0.0.0
     depends_on:
       - server
