--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,15 @@ services:
       dockerfile: Dockerfile
     container_name: casadeares-server
     environment:
-      NODE_ENV: development
+      # NODE_ENV: development
+      NODE_ENV: production
       PORT: 3001
       CORS_ORIGIN: "*"
     volumes:
       - ./server:/app
       - /app/node_modules
-    ports:
-      - "3001:3001"
+    # ports:
+    #   - "3001:3001"
     command: npm run dev
 
   client:
@@ -26,8 +27,8 @@ services:
     volumes:
       - ./client:/app
       - /app/node_modules
-    ports:
-      - "5173:5173"
+    # ports:
+    #   - "5173:5173"
     command: npm run dev -- --host 0.0.0.0
     depends_on:
       - server
