--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     volumes:
       - ./client:/app
       - /app/node_modules
-    # ports:
-    #   - "5173:5173"
+    ports:
+      - "127.0.0.1:5173:5173"
     command: npm run dev -- --host 0.0.0.0
     depends_on:
       - server
